--- a/roles/keycloak/templates/keycloak.service.j2
+++ b/roles/keycloak/templates/keycloak.service.j2
@@ -7,7 +7,7 @@ Type=idle
 Environment=JBOSS_HOME={{ keycloak_jboss_home }} JBOSS_LOG_DIR={{ keycloak_log_dir }} "JAVA_OPTS=-Xms1024m -Xmx20480m -XX:MaxPermSize=768m"
 User=keycloak
 Group=keycloak
-ExecStart={{ keycloak_jboss_home }}/bin/standalone.sh -Djboss.socket.binding.port-offset=100  -c standalone-ha.xml
+ExecStart={{ keycloak_jboss_home }}/bin/standalone.sh -Djboss.socket.binding.port-offset={{ keycloak_port_offset }} -c standalone-ha.xml -b 0.0.0.0
 TimeoutStartSec=600
 TimeoutStopSec=600
 
