Add websso fragment in inventory

--- a/roles/provision/templates/inventory.ini.j2
+++ b/roles/provision/templates/inventory.ini.j2
@@ -11,6 +11,13 @@
 {% endif %}
 {% endfor %}
 
+[sso]
+{% for item in osservers.results %}
+{% if item.server.name.startswith('sso')  %}
+{{ item.server.name  }}
+{% endif %}
+{% endfor %}
+
 [bastion]
 {% for item in osservers.results %}
 {% if item.server.name.startswith('bastion')  %}
