--- a/roles/provision/libvirt/templates/vm.xml.j2
+++ b/roles/provision/libvirt/templates/vm.xml.j2
@@ -31,6 +31,15 @@
     <suspend-to-disk enabled='no'/>
   </pm>
   <devices>
+
+    <disk type='file' device='disk'>
+      <driver name='qemu' type='qcow2'/>
+      <source file='/var/lib/libvirt/images/{{ item.name }}.qcow2'/>
+      <target dev='hda' bus='ide'/>
+      <address type='drive' controller='0' bus='0' target='0' unit='0'/>
+    </disk>
+
+
     <emulator>/usr/bin/qemu-kvm</emulator>
     <controller type='usb' index='0' model='ich9-ehci1'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x05' function='0x7'/>
