--- a/roles/provision/libvirt/templates/vm.xml.j2
+++ b/roles/provision/libvirt/templates/vm.xml.j2
@@ -63,6 +63,23 @@
     <controller type='virtio-serial' index='0'>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x06' function='0x0'/>
     </controller>
+
+  <interface type='network'>
+      <source network='default' bridge='virbr0'/>
+      <target dev='vnet0'/>
+      <model type='rtl8139'/>
+      <alias name='net0'/>
+      <address type='pci' domain='0x0000' bus='0x00' slot='0x03' function='0x0'/>
+    </interface>
+    <interface type='direct'>
+      <source dev='{{ ethernet_device }}' mode='bridge'/>
+      <target dev='macvtap0'/>
+      <model type='virtio'/>
+      <alias name='net1'/>
+      <address type='pci' domain='0x0000' bus='0x00' slot='0x08' function='0x0'/>
+    </interface>
+
+
     <serial type='pty'>
       <target type='isa-serial' port='0'>
         <model name='isa-serial'/>
