--- a/roles/provision/libvirt/templates/vm.xml.j2
+++ b/roles/provision/libvirt/templates/vm.xml.j2
@@ -1,8 +1,8 @@
 
 <domain type='kvm'>
-  <name>{{ item.name }}</name>
-  <memory unit='KiB'>4194304</memory>
-  <currentMemory unit='KiB'>4194304</currentMemory>
+  <name>{{ item.name }}.{{ cluster_domain }}</name>
+  <memory unit='KiB'>9586980</memory>
+  <currentMemory unit='KiB'>9586980</currentMemory>
   <vcpu placement='static'>2</vcpu>
   <os>
     <type arch='x86_64' >hvm</type>
@@ -79,6 +79,13 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x08' function='0x0'/>
     </interface>
 
+    <interface type='direct'>
+      <source dev='em2' mode='bridge'/>
+      <target dev='macvtap0'/>
+      <model type='virtio'/>
+      <alias name='net2'/>
+      <address type='pci' domain='0x0000' bus='0x00' slot='0x09' function='0x0'/>
+    </interface>
 
     <serial type='pty'>
       <target type='isa-serial' port='0'>
