--- a/roles/provision/libvirt/templates/vm.xml.j2
+++ b/roles/provision/libvirt/templates/vm.xml.j2
@@ -72,7 +72,7 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x03' function='0x0'/>
     </interface>
     <interface type='direct'>
-      <source dev='{{ ethernet_device }}' mode='bridge'/>
+      <source dev='{{ ethernet_device_1 }}' mode='bridge'/>
       <target dev='macvtap0'/>
       <model type='virtio'/>
       <alias name='net1'/>
@@ -80,7 +80,7 @@
     </interface>
 
     <interface type='direct'>
-      <source dev='em2' mode='bridge'/>
+      <source dev='{{ ethernet_device_2 }}' mode='bridge'/>
       <target dev='macvtap0'/>
       <model type='virtio'/>
       <alias name='net2'/>
