--- a/roles/provision/libvirt/templates/vm.xml.j2
+++ b/roles/provision/libvirt/templates/vm.xml.j2
@@ -1,6 +1,6 @@
 
 <domain type='kvm'>
-  <name>{{ item.name }}.{{ cluster_domain }}</name>
+  <name>{{ item.name }}</name>
   <memory unit='KiB'>9586980</memory>
   <currentMemory unit='KiB'>9586980</currentMemory>
   <vcpu placement='static'>2</vcpu>
@@ -34,7 +34,7 @@
 
     <disk type='file' device='disk'>
       <driver name='qemu' type='qcow2'/>
-      <source file='/var/lib/libvirt/images/{{ item.name }}.qcow2'/>
+      <source file='{{ target_image_dir }}/{{ item.name }}.qcow2'/>
       <target dev='hda' bus='ide'/>
       <address type='drive' controller='0' bus='0' target='0' unit='0'/>
     </disk>
